# vgmdb-rust-old

./: .env  .gitignore  .travis.yml  Cargo.toml  lib.rs  main  readme.md
scripts/: anidb_meta_to_clipboard.applescript  artist_parse.py  noir_yeux_translate.py  tag_m4a.py  tag_mp3.py
src/: main.rs
src/vgmdb/: data.rs  errors.rs  http.rs  io.rs  mod.rs
