[package]

name = "vgmdb-rust"
version = "0.2.1"
authors = ["Bilal Syed Hussain <bilalshussain@gmail.com>"]

description = "Package moved to vgmdb"
homepage = "https://github.com/Bilalh/vgmdb-rust"
repository= "https://github.com/Bilalh/vgmdb-rust"
license = "Apache-2.0"
readme = "readme.md"

keywords = ["mp3", "vgmdb", "id3", "id3v2", "music" ]

[dependencies]
id3 = "*"
rustc-serialize = "0.3"
hyper = "*"
url="*"
argparse = "*"


[profile.dev]
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
